// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tiger dateFilterConfigs > should load date filter configs 1`] = `
InMemoryPaging {
  "allItems": [
    {
      "absoluteForm": {
        "localIdentifier": "ABSOLUTE_FORM",
        "name": "",
        "type": "absoluteForm",
        "visible": true,
      },
      "absolutePresets": [],
      "allTime": {
        "localIdentifier": "ALL_TIME",
        "name": "",
        "type": "allTime",
        "visible": true,
      },
      "ref": {
        "identifier": "defaultDateFilterProjectConfig",
      },
      "relativeForm": {
        "availableGranularities": [
          "GDC.time.month",
          "GDC.time.minute",
          "GDC.time.hour",
          "GDC.time.date",
          "GDC.time.week_us",
          "GDC.time.quarter",
          "GDC.time.year",
        ],
        "localIdentifier": "RELATIVE_FORM",
        "name": "",
        "type": "relativeForm",
        "visible": true,
      },
      "relativePresets": [
        {
          "from": -14,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_15_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -29,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_30_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -44,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_45_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -59,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_60_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_HOUR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -7,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_8_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -11,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_12_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -23,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_24_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "THIS_WEEK",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "LAST_WEEK",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "LAST_2_WEEKS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.date",
          "localIdentifier": "TODAY",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.date",
          "localIdentifier": "YESTERDAY",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -6,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_7_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -29,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_30_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -89,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_90_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.month",
          "localIdentifier": "THIS_MONTH",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_MONTH",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -11,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_12_MONTHS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "THIS_QUARTER",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_QUARTER",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -3,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_4_QUARTERS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.year",
          "localIdentifier": "THIS_YEAR",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.year",
          "localIdentifier": "LAST_YEAR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
      ],
      "selectedOption": "THIS_MONTH",
    },
  ],
  "items": [
    {
      "absoluteForm": {
        "localIdentifier": "ABSOLUTE_FORM",
        "name": "",
        "type": "absoluteForm",
        "visible": true,
      },
      "absolutePresets": [],
      "allTime": {
        "localIdentifier": "ALL_TIME",
        "name": "",
        "type": "allTime",
        "visible": true,
      },
      "ref": {
        "identifier": "defaultDateFilterProjectConfig",
      },
      "relativeForm": {
        "availableGranularities": [
          "GDC.time.month",
          "GDC.time.minute",
          "GDC.time.hour",
          "GDC.time.date",
          "GDC.time.week_us",
          "GDC.time.quarter",
          "GDC.time.year",
        ],
        "localIdentifier": "RELATIVE_FORM",
        "name": "",
        "type": "relativeForm",
        "visible": true,
      },
      "relativePresets": [
        {
          "from": -14,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_15_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -29,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_30_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -44,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_45_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -59,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_60_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_HOUR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -7,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_8_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -11,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_12_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -23,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_24_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "THIS_WEEK",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "to": 0,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "THIS_WEEK_TO_DATE",
          "type": "relativePreset",
          "visible": true,
          "name": "",
          "boundedFilter": {
            "granularity": "GDC.time.date",
            "to": 0,
          },
        },
        {
          "from": -1,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "LAST_WEEK",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "LAST_2_WEEKS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.date",
          "localIdentifier": "TODAY",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.date",
          "localIdentifier": "YESTERDAY",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -6,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_7_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -29,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_30_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -89,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_90_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.month",
          "localIdentifier": "THIS_MONTH",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "to": 0,
          "granularity": "GDC.time.month",
          "localIdentifier": "THIS_MONTH_TO_DATE",
          "type": "relativePreset",
          "visible": true,
          "name": "",
          "boundedFilter": {
            "granularity": "GDC.time.date",
            "to": 0,
          },
        },
        {
          "from": -1,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_MONTH",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -11,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_12_MONTHS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "THIS_QUARTER",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "to": 0,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "THIS_QUARTER_TO_DATE",
          "type": "relativePreset",
          "visible": true,
          "name": "",
          "boundedFilter": {
            "granularity": "GDC.time.date",
            "to": 0,
          },
        },
        {
          "from": -1,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_QUARTER",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -3,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_4_QUARTERS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.year",
          "localIdentifier": "THIS_YEAR",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "to": 0,
          "granularity": "GDC.time.year",
          "localIdentifier": "THIS_YEAR_TO_DATE",
          "type": "relativePreset",
          "visible": true,
          "name": "",
          "boundedFilter": {
            "granularity": "GDC.time.date",
            "to": 0,
          },
        },
        {
          "from": -1,
          "granularity": "GDC.time.year",
          "localIdentifier": "LAST_YEAR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
      ],
      "selectedOption": "THIS_MONTH",
    },
  ],
  "limit": 10,
  "offset": 0,
  "totalCount": 1,
}
`;

exports[`tiger dateFilterConfigs > should load empty date filter configs for out-of-range page 1`] = `
InMemoryPaging {
  "allItems": [
    {
      "absoluteForm": {
        "localIdentifier": "ABSOLUTE_FORM",
        "name": "",
        "type": "absoluteForm",
        "visible": true,
      },
      "absolutePresets": [],
      "allTime": {
        "localIdentifier": "ALL_TIME",
        "name": "",
        "type": "allTime",
        "visible": true,
      },
      "ref": {
        "identifier": "defaultDateFilterProjectConfig",
      },
      "relativeForm": {
        "availableGranularities": [
          "GDC.time.month",
          "GDC.time.minute",
          "GDC.time.hour",
          "GDC.time.date",
          "GDC.time.week_us",
          "GDC.time.quarter",
          "GDC.time.year",
        ],
        "localIdentifier": "RELATIVE_FORM",
        "name": "",
        "type": "relativeForm",
        "visible": true,
      },
      "relativePresets": [
        {
          "from": -14,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_15_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -29,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_30_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -44,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_45_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -59,
          "granularity": "GDC.time.minute",
          "localIdentifier": "LAST_60_MINUTES",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_HOUR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -7,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_8_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -11,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_12_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -23,
          "granularity": "GDC.time.hour",
          "localIdentifier": "LAST_24_HOURS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "THIS_WEEK",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "LAST_WEEK",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.week_us",
          "localIdentifier": "LAST_2_WEEKS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.date",
          "localIdentifier": "TODAY",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.date",
          "localIdentifier": "YESTERDAY",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -6,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_7_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -29,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_30_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -89,
          "granularity": "GDC.time.date",
          "localIdentifier": "LAST_90_DAYS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.month",
          "localIdentifier": "THIS_MONTH",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_MONTH",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -11,
          "granularity": "GDC.time.month",
          "localIdentifier": "LAST_12_MONTHS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "THIS_QUARTER",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_QUARTER",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -3,
          "granularity": "GDC.time.quarter",
          "localIdentifier": "LAST_4_QUARTERS",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": 0,
          "granularity": "GDC.time.year",
          "localIdentifier": "THIS_YEAR",
          "name": "",
          "to": 0,
          "type": "relativePreset",
          "visible": true,
        },
        {
          "from": -1,
          "granularity": "GDC.time.year",
          "localIdentifier": "LAST_YEAR",
          "name": "",
          "to": -1,
          "type": "relativePreset",
          "visible": true,
        },
      ],
      "selectedOption": "THIS_MONTH",
    },
  ],
  "items": [],
  "limit": 10,
  "offset": 1,
  "totalCount": 1,
}
`;
